---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - 
  Bugfixes:
    - Fixed a crash with certain mods when loading a map

---------------------------------------------------------------------------------------------------
Version: 0.18.19
Date: 27. 05. 2020
  Changes:
    - Adjusted some interface styles due to changes that came with Factorio 0.18.27

---------------------------------------------------------------------------------------------------
Version: 0.18.18
Date: 25. 05. 2020
  Features:
    - Added a preference where you can specify a default module for both machines and beacons, as well as a default beacon count. These preferences cause newly created recipe lines to automatically be maxed out with the specified modules and beacons. This makes it less work to create a fully beacon-ed setup. This functionality is pretty bare-bones and not very smart, but it's a good start.
  Bugfixes:
    - Fixed a crash when loading a map that used certain kinds of recipes
    - Fixed the rocket-part item not being visible anymore in the product picker

---------------------------------------------------------------------------------------------------
Version: 0.18.17
Date: 23. 05. 2020
  Bugfixes:
    - Fixed a crash in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 0.18.16
Date: 22. 05. 2020
  Changes:
    - The 'items/s/machine'-view now also works for fluids
    - The interface now remains open when alt-tabbing or resizing the Factorio window
    - Now allows SI prefixes to be localised
  Bugfixes:
    - Fixed how the mod detects which machines can produce certain recipes in the proper way
    - Fixed that setting hard limits on rocket silo recipes would not work correctly