@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - 
   Bugfixes:
     - Fixed a crash with certain mods when loading a map
+    - Now displays power consumption and emissions correctly for machines with a void power source
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.19
